--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,5 +1,3 @@
-<h1>Editing <%= @song.title %> by <%= @song.artist_name %></h1>
+<h1>Create a Song:</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Cancel Editing', @song %>
