--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,2 +1,6 @@
 <h3>Songs:</h3>
-<h2><%= @songs %></h2>
+<% @songs.each do |song| %>
+<h2>Title:<%= song.title %></h2>
+<h2>Artist:<%= song.artist_name %></h2>
+<h2>Genre:<%= song.genre %></h2>
+<h2>Year Released:<%= song.release_year %></h2>
