--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -4,3 +4,4 @@
 <h2>Artist:<%= song.artist_name %></h2>
 <h2>Genre:<%= song.genre %></h2>
 <h2>Year Released:<%= song.release_year %></h2>
+<% end %>
