--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,4 @@
 <h3>Songs:</h3>
 <% @songs.each do |song| %>
-<h2>Title:<%= song.title %></h2>
-<h2>Artist:<%= song.artist_name %></h2>
-<h2>Genre:<%= song.genre %></h2>
-<h2>Year Released:<%= song.release_year %></h2>
+<h2><%= song %></h2>
 <% end %>
